--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "homepage": "https://nikitat1.github.io/network/",
   "dependencies": {
     "@babel/runtime": "^7.6.3",
+    "@types/jest": "^25.1.2",
+    "@types/node": "^13.7.1",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
+    "@types/redux-form": "^8.2.1",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -14,7 +20,8 @@
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "typescript": "^3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
